<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:background="@color/layout_background"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_code_received"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editTextOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/input_et_bg"
        android:hint="@string/enter_received_otp"
        android:inputType="textEmailAddress"
        android:textColor="@color/input_et_text"
        android:textColorHint="@color/input_et_hint" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonConfirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/bluegrey"
        android:padding="12dp"
        android:text="@string/confirm_otp"
        android:textAlignment="center"
        android:textColor="@color/white" />


</LinearLayout>