<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bridgelabz.fragment.AttendanceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_img"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="159dp"
            android:orientation="horizontal"
            android:paddingTop="50dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Date"
                    android:textAppearance="?android:textAppearanceLarge" />

                <EditText
                    android:id="@+id/etEtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/date"
                    android:inputType="date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="In"
                    android:textAppearance="?android:textAppearanceLarge" />

                <EditText
                    android:id="@+id/etEdtInTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/in_time"
                    android:inputType="time" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtOutTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Out"
                    android:textAppearance="?android:textAppearanceLarge" />

                <EditText
                    android:id="@+id/etEdtOutTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/out_time"
                    android:inputType="time" />

            </LinearLayout>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Confirm" />
    </LinearLayout>

</FrameLayout>
